--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.2"
+#  - "3.2"  # py.test has no support for Python 3.2
   - "3.3"
   - "3.4"
   - "3.5"
