Add Tox configuration file (and use a more recent version of ``pytest`` and ``pytest-cov``.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,5 @@
 [bdist_wheel]
-universal=1
+universal = 1
 
-[pytest]
-python_files=test*.py
-
-[coverage:run]
-omit =
-    */tests/*
+[tool:pytest]
+python_files = test*.py
