--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "nightly" # currently points to 3.7-dev
   - "pypy"
 install:
-  - pip install tox
+  - pip install tox-travis
   - pip install coveralls
 script:
   tox
