--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,10 @@ python_files = test*.py
 
 [aliases]
 release = egg_info -D -b '' sdist bdist_wheel
+
+[build_sphinx]
+source-dir = docs/source
+build-dir = dist/docs
+
+[upload_docs]
+upload-dir = dist/docs/html
