--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,7 +11,7 @@ replace = version='{new_version}'
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:docs/source/conf.py]
+[bumpversion:file:docs/source/conf.py]
 search = release = "{current_version}"
 replace = release = "{new_version}"
 
